--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,27 @@
 body {
     background-color: chocolate;
   }
+
+  html, body{
+    margin: 0%;
+    padding: 0%;
+  }
+
+  header{
+    text-align: center;
+    background-color: rgb(39, 44, 112) ;
+    padding: 20px;
+  }
+
+  header img{
+    width: 300px;
+    height: 300px;
+    border: 20px solid rgb(55, 110, 141);
+    border-radius: 50%;
+  }
+
+  header h1{
+    font-family: "rajdhani", sans-serif;
+    font-weight: 400;
+    font-style: normal;
+  }
