--- a/css/style.css
+++ b/css/style.css
@@ -27,10 +27,30 @@ header h1 {
 }
 
 main {
-  width: 800px;
+  width: 800px;s
   margin: 0 auto;
 }
 
 main img {
   max-width: 100% ;
+}
+
+footer{
+  background-color: rgb(47, 115, 242);
+  padding: 40px;
+  text-align: center;
+  margin-top: 60px;
+}
+
+footer .content{
+  width: 800px;
+  margin: 0 auto;
+}
+
+footer a{
+  color: white;
+}
+
+footer a:hover{
+  color: rgb(255, 192, 74)
 }
